[package]
name = "logtime42"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "0.4.39"
serde_json = "1.0"
serde = { version = "1.0.130", features = ["derive"] }
chrono = "0.4.19"
http = "0.2.5"
url = "2.2.2"
ansi_term = "0.12.1"
clap = "3.1.12"
